[fix] wrap messaggi lunghi

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,10 @@ i:hover{
     display: inline;
 }
 
+.msg{
+    word-wrap: break-word;
+}
+
 @media screen and (max-height : 600px) {
     .users{
         height: 50%;
